# requests-forecast

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Guardfile  HISTORY.rst  LICENSE  MANIFEST.in  Procfile.dev  README.md  README.rst  dev-requirements.txt  justfile  pyproject.toml  requests_forecast.py  requirements.in  requirements.txt  setup.cfg  setup.py  tasks.py  test_requests_forecast.py  tox.ini
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
test/: test_requests_forecast.py
test/fixtures/: alerts.json  base.json  full.json
tests/: test_requests_forecast.py  time.json
