[metadata]
name = requests-forecast
license = BSD
version = 2023.2.1
description = A minimalist Forecast.io API client.
long_description = file: README.md
long_description_content_type = text/markdown
author = Jeff Triplett
author_email = jeff.triplett@gmail.com
url = https://github.com/jefftriplett/requests-forecast
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
py_modules = requests_forecast
install_requires =
    pydantic
    pytz
    requests
packages = find:
python_requires = >=3.7.0

[wheel]
universal = 1
